--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Project</title>
+  <title>Bookmark</title>
 
 
   <!-- Stylesheets -->
@@ -12,7 +12,43 @@
 </head>
 <body>
 
+  <header class="site-header">
+    <div class="site-header__container container">
+      <img class="site-header__logo logo" src="img/logo.svg" alt="Bookmark site logo" width="148" height="25">
+      <nav class="site-nav">
+        <ul class="site-nav__list">
+          <li class="site-nav__item">
+            <a href="" class="site-nav__link">FEATURES</a>
+          </li>
+          <li class="site-nav__item">
+            <a href="" class="site-nav__link">PRICING</a>
+          </li>
+          <li class="site-nav__item">
+            <a href="" class="site-nav__link">CONTACT</a>
+          </li>
+        </ul>
+      </nav>
+      <a class="site-header__button button button-big button-red" href="#" >Login</a>
+    </div>
+  </header>
 
+  <!-- MAIN-CONTENT -->
+  <main class="main-content">
+    <section class="hero">
+      <div class="hero__container container">
+        <div class="hero__content-wrapper">
+          <div class="hero__content">
+            <h2 class="hero__heading">A Simple Bookmark Manager</h2>
+            <p class="hero__title">A clean and simple interface to organize your favourite websites. Open a new browser tab and see your sites load instantly. Try it for free.</p>
+            <div class="hero__buttons">
+              <a href="" class="hero-button button">Get it on Chrome</a>
+              <a href="" class="hero-button button button-brown hero-button__brown">Get it on Firefox</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+  </main>
 
 
   <script src="js/main.js"></script>
